--- a/index.html
+++ b/index.html
@@ -7,126 +7,101 @@
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
-    <nav class="nav">
-        <ul class="nav__menu">
-            <li class="menu__item"><a href="" class="menu__link">Mail</a></li>
-            <li class="menu__item"><a href="" class="menu__link">Images</a></li>
-            <li class="menu__item-popup">
-                <input type="checkbox" id="menu__input" class="menu__item-input" />
-                <label for="menu__input" class="menu__item-label" tabindex="0"></label>
-                <ul class="menu__submenu">
-                    <li class="submenu__item">
-                        <a class="submenu__link" href="#">
-                            <img src="./img/menupopup/calendar.png" alt="calendar icon">
-                            Calendar
-                        </a>
-                    </li>
-                    <li class="submenu__item">
-                        <a class="submenu__link" href="#">
-                            <img src="./img/menupopup/email.png"  alt="mail icon">
-                            Mail
-                        </a>
-                    </li>
-                    <li class="submenu__item">
-                        <a class="submenu__link" href="#">
-                            <img src="./img/menupopup/newspaper.png"  alt="news icon">
-                            News
-                        </a>
-                    </li>
-                    <li class="submenu__item">
-                        <a class="submenu__link" href="#">
-                            <img src="./img/menupopup/map.png"  alt="map icon">
-                            Map
-                        </a>
-                    </li>
-                    <li class="submenu__item">
-                        <a class="submenu__link" href="#">
-                            <img src="./img/menupopup/folder.png"  alt="files icon">
-                            Files
-                        </a>
-                    </li>
-                    <li class="submenu__item">
-                        <a class="submenu__link" href="#">
-                            <img src="./img/menupopup/contact.png" alt="contacts icon">
-                            Contacts
-                        </a>
-                    </li>
-                    <li class="submenu__item">
-                        <a class="submenu__link" href="#">
-                            <img src="./img/menupopup/translate.png" alt="translation icon">
-                            Translate
-                        </a>
-                    </li>
-                    <li class="submenu__item">
-                        <a class="submenu__link" href="#">
-                            <img src="./img/menupopup/video.png" alt="videos icon">
-                            Videos
-                        </a>
-                    </li>
-                    <li class="submenu__item">
-                        <a class="submenu__link" href="#">
-                            <img src="./img/menupopup/search.png" alt="search icon">
-                            Search
-                        </a>
-                    </li>
-                    <li class="submenu__item">
-                        <a class="submenu__link" href="#">
-                            <img src="./img/menupopup/photo.png" alt="photo icon">
-                            Photo
-                        </a>
-                    <li class="submenu__item">
-                        <a class="submenu__link" href="#">
-                            <img src="./img/menupopup/app.png" alt="apps icon">
-                            Apps
-                        </a>
-                    </li>
-                    <li class="submenu__item">
-                        <a class="submenu__link" href="#">
-                            <img src="./img/menupopup/docs.png" alt="docs icon">
-                            Document
-                        </a>
-                    </li>
-                    </ul>
-                    <input type="checkbox" id="submenu__input" class="submenu__item-input" />
-                    <label for="submenu__input" class="submenu__item-label" tabindex="0"></label>
-                    <ul class="submenu__insidemenu">
-                        <li class="insidemenu__item">
-                            <a class="insidemenu__link" href="#">
-                            <img src="./img/menupopup/menumore/cloud-network.png" alt="cloud network">
-                            Cloud-network
-                        </a>
-                    </li>
-                        <li class="insidemenu__item">
-                            <a class="insidemenu__link" href="#">
-                            <img src="./img/menupopup/menumore/gear.png"  alt="gear">
-                            Gear
-                        </a>
-                    </li>
-                        <li class="insidemenu__item">
-                            <a class="insidemenu__link" href="#">
-                            <img src="./img/menupopup/menumore/group.png"  alt="group">
-                            Group
-                        </a>
-                    </li>
-                        <li class="insidemenu__item">
-                            <a class="insidemenu__link" href="#">
-                            <img src="./img/menupopup/menumore/music-folder.png" alt="music folder">
-                            Music-folder
-                        </a>
-                    </li>
-                        <li class="insidemenu__item"><a class="submenu__link" href="#">
-                            <img src="./img/menupopup/menumore/shield.png"  alt="shield">
-                            shield
-                        </a>
-                    </li>
-                    </ul>
-            <li class="menu__item">
-                <a class="menu__link-bell" href="#"></a>
-            </li>
-            <li class="menu__item">
-                <a class="menu__link-user" href="https://github.com/Liddell777"></a>
-            </li>
-        </ul>
-    </nav>
+    <header>
+        <nav class="nav">
+            <ul class="nav__menu">
+                <li class="menu__item">
+                    <a href="#" class="menu__link-txt"><img src="/img/menu/mail.png" alt="mail"></a>
+                </li>
+                <li class="menu__item">
+                    <a href="#" class="menu__item-label"><img src="/img/menu/picture.png" alt="Images"></a>
+                </li>
+                <li class="menu__item">
+                    <div class="menu">
+                        <input type="checkbox" id="menu-btn" class="menu__input"/>
+                        <label for="menu-btn" class="menu__label" tabindex="0"><img src="/img/menu/apps.png" alt="menu"/></label>
+                        <div class="mainpopup mainpopup--invisible">
+                            <a class="mainpopup__link" href="#">
+                                <img src="./img/menupopup/calendar.png" alt="calendar icon">
+                                Calendar
+                            </a>
+                            <a class="mainpopup__link" href="#">
+                                <img src="./img/menupopup/email.png"  alt="mail icon">
+                                Mail
+                            </a>
+                            <a class="mainpopup__link" href="#">
+                                <img src="./img/menupopup/newspaper.png"  alt="news icon">
+                                News
+                            </a>
+                            <a class="mainpopup__link" href="#">
+                                <img src="./img/menupopup/map.png"  alt="map icon">
+                                Map
+                            </a>
+                            <a class="mainpopup__link" href="#">
+                                <img src="./img/menupopup/folder.png"  alt="files icon">
+                                Files
+                            </a>
+                            <a class="mainpopup__link" href="#">
+                                <img src="./img/menupopup/contact.png" alt="contacts icon">
+                                Contacts
+                            </a>
+                            <a class="mainpopup__link" href="#">
+                                <img src="./img/menupopup/translate.png" alt="translation icon">
+                                Translate
+                            </a>
+                            <a class="mainpopup__link" href="#">
+                                <img src="./img/menupopup/video.png" alt="videos icon">
+                                Videos
+                            </a>
+                            <a class="mainpopup__link" href="#">
+                                <img src="./img/menupopup/search.png" alt="search icon">
+                                Search
+                            </a>
+                            <a class="mainpopup__link" href="#">
+                                <img src="./img/menupopup/photo.png" alt="photo icon">
+                                Photo
+                            </a>
+                            <a class="mainpopup__link" href="#">
+                                <img src="./img/menupopup/app.png" alt="apps icon">
+                                Apps
+                            </a>
+                            <a class="mainpopup__link" href="#">
+                                <img src="./img/menupopup/docs.png" alt="docs icon">
+                                Document
+                            </a>
+                            <input type="checkbox" id="mainpopup__input" class="mainpopup__item-input" />
+                            <label for="mainpopup__input" class="mainpopup__item-label" tabindex="0"></label>
+                            <a class="mainpopup__link mainpopup__link--hidden" href="#">
+                                <img src="./img/menupopup/menumore/cloud-network.png" alt="cloud network">
+                                Cloud-network
+                            </a>
+                            <a class="mainpopup__link mainpopup__link--hidden" href="#">
+                                <img src="./img/menupopup/menumore/gear.png"  alt="gear">
+                                Gear
+                            </a>
+                            <a class="mainpopup__link mainpopup__link--hidden" href="#">
+                                <img src="./img/menupopup/menumore/group.png"  alt="group">
+                                Group
+                            </a>
+                            <a class="mainpopup__link mainpopup__link--hidden" href="#">
+                                <img src="./img/menupopup/menumore/music-folder.png" alt="music folder">
+                                Music-folder
+                            </a>
+                            <a class="mainpopup__link mainpopup__link--hidden" href="#">
+                                <img src="./img/menupopup/menumore/shield.png"  alt="shield">
+                                shield
+                            </a>
+                        </div>
+                    </div>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link-bell" href="#"><img src="/img/menu/bell.png" alt="bell"></a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link-user" href="https://github.com/Liddell777"><img src="/img/menu/45641044.jpg" alt="picture"></a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
