fixed links on img

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             <nav class="nav">
                 <ul class="nav__menu">
                     <li class="menu__item">
-                        <a href="#" class="menu__link-txt"><img src="/img/menu/mail.png" alt="mail"></a>
+                        <a href="#" class="menu__link-txt"><img src="img/menu/mail.png" alt="mail"></a>
                     </li>
                     <li class="menu__item">
-                        <a href="#" class="menu__item-label"><img src="/img/menu/picture.png" alt="Images"></a>
+                        <a href="#" class="menu__item-label"><img src="img/menu/picture.png" alt="Images"></a>
                     </li>
                     <li class="menu__item">
                         <div class="menu">
@@ -96,10 +96,10 @@
                         </div>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link-bell" href="#"><img src="/img/menu/bell.png" alt="bell"></a>
+                        <a class="menu__link-bell" href="#"><img src="img/menu/bell.png" alt="bell"></a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link-user" href="https://github.com/Liddell777"><img src="/img/menu/45641044.jpg" alt="picture"></a>
+                        <a class="menu__link-user" href="https://github.com/Liddell777"><img src="img/menu/45641044.jpg" alt="picture"></a>
                     </li>
                 </ul>
             </nav>
