--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li class="menu__item">
                         <div class="menu">
                             <input type="checkbox" id="menu-btn" class="menu__input"/>
-                            <label for="menu-btn" class="menu__label" tabindex="0"><img src="/img/menu/apps.png" alt="menu"/></label>
+                            <label for="menu-btn" class="menu__label" tabindex="0"><img src="img/menu/apps.png" alt="menu"/></label>
                             <div class="mainpopup mainpopup--invisible">
                                 <a class="mainpopup__link" href="#">
                                     <img src="./img/menupopup/calendar.png" alt="calendar icon">
